Chat screen submenu option alignment issues fixed,Pop screen UI issues Fixed,Added notification Controller and profile details Screen UI issues fixed,icon changes in disappear menu and Redesign in chat headers , To remove hops and added network status icon,contact side UI issues fiexd,setting -> hops icon redesigned,secret group -> select contact UI issue fixed,secret group->group details screen ->names UIissues fixed,message request->clear data button redesigned

--- a/stylesheets/_bchat_left_pane.scss
+++ b/stylesheets/_bchat_left_pane.scss
@@ -279,7 +279,7 @@ $bchat-compose-margin: 20px;
     .buttonBox {
       // width: 100%;
       width: 378px;
-      background-color: var(--color-overlayBg);
+      // background-color: var(--color-overlayBg);
       padding: 0 0;
       text-align: center;
       margin: 5px auto;
@@ -444,7 +444,7 @@ $bchat-compose-margin: 20px;
   display: flex;
   flex-direction: column;
   // flex-grow: 1;
-  height: 75%;
+  height:  82.8%;
   transition: none;
   background: var(--color-left-pane-overlay-background);
   // text-align: center;
