--- a/stylesheets/_bchat_signin.scss
+++ b/stylesheets/_bchat_signin.scss
@@ -106,10 +106,11 @@
       // text-align: center;
       font-family: "poppin-regular";
       font-size: 12px;
-      width: 92%;
-    margin-top: 45px;
+      width: 88%;
+       margin-top: 45px;
     /* display: flex; */
-    margin-left: 58px;
+       margin-left: 58px;
+    
       span{
         color:#F23333;
       }
