--- a/stylesheets/_modal.scss
+++ b/stylesheets/_modal.scss
@@ -380,9 +380,10 @@
 
 
       p {
-        font-size: 20px;
+        font-size: 16px;
         padding: 0px $bchat-margin-sm;
         margin-left: 33px;
+        line-height: 22px;
       }
 
       .qr-icon-btn {
